# ComfyUI-VRAM-watcher

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  vram_watcher.py
web/: manifest.json  vram_watcher.js
